--- a/concourse/docker/pxf-dev-base/gpdb5/centos7/Dockerfile
+++ b/concourse/docker/pxf-dev-base/gpdb5/centos7/Dockerfile
@@ -2,8 +2,10 @@ ARG BASE_IMAGE=gcr.io/data-gpdb-public-images/gpdb5-centos7-build-test:latest
 
 FROM ${BASE_IMAGE}
 
+ARG GINKGO_VERSION
+
 # install Go utilities
-RUN GOPATH=/opt/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo
+RUN GOPATH=/opt/go /usr/local/go/bin/go install github.com/onsi/ginkgo/ginkgo@v${GINKGO_VERSION}
 
 # add Java 8, Java 11 and rpm-build
 RUN yum install -y rpm-build java-1.8.0-openjdk-devel && yum clean all \
